[package]
name = "portfolio-tracker"
version = "0.1.0"
edition = "2021"
description = "A terminal-based portfolio tracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "6.1.1"
text_io = "0.1.12"
indoc = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
yahoo_finance_api = "1.3.0"
tokio-test = "0.4.2"
rustyline = "10.0.0"

[profile.release]
# make a small binary - I care much more about small size than speed here
opt-level = "z"
lto = true
strip = true
codegen-units = 1
